maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:14: error: not found: value random3
      random3() match {
      ^