maze.island.IslandMaze.scala.code
override def run() {
  
  goToNorthWall();
  followLeftWall();
  
  pickupBaggle();
}

def goToNorthWall() {
  while (getY() != 0) {
    while (getDirection() != Direction.NORTH) left();
    while (isFacingWall()) {
      random3() match {
        case 0 => right();
        case 1 => left();
        case 2 => left();
      }
    }
    forward();
  }
}

def followLeftWall() {
  while (!isOverBaggle()) {
    keepHandOnSideWall();
    forward();
  }
}

def keepHandOnSideWall() {
  left();
  while (isFacingWall()) right();
}